<resources>
    <string name="app_name">TravelDemo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonIcon1">首页</string>
    <string name="buttonIcon2">去旅行</string>
    <string name="buttonIcon3">我的</string>
    <string name="login_hello">hi~哈喽</string>
    <string name="button_login">登陆/注册</string>
    <string name="button_logout">注销登陆</string>
    <string name="login_tips1">登录后更精彩</string>
    <string name="login_tips2">全世界的旅行故事都在期待与你的相遇</string>
    <string name="user_number">请输入手机号</string>
    <string name="user_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="Login">用户登录</string>
    <string name="Login_t">旅行社登录</string>
    <string name="current_key">current_key</string>
    <string name="shp_current_name">current_name</string>
    <string name="modify_save">保存</string>
    <string name="agency_travelinfo">旅行方案</string>
    <string name="agency_order">预定游客</string>
    <string name="agency_logout">注销账户</string>
    <string name="agency_loginname">agency_loginname</string>
    <string name="Agency_name">旅行社：</string>
    <string name="plan_country">国  家：</string>
    <string name="plan_city">城  市：</string>
    <string name="plan_origin">始发地：</string>
    <string name="text_settingno">未设置</string>
    <string name="departure_time">出发时间：</string>
    <string name="enjoy_time">游玩时间：</string>
    <string name="total_price">总金额：</string>
    <string name="button_agencyadd">添加</string>
    <string name="agency_loginnameadd">agency_loginname</string>
    <string name="attraction_name">景点名：</string>
    <string name="attraction_opentime">开放时间：</string>
    <string name="attraction_des">景点描述：</string>
    <string name="attraction_position">景点位置：</string>
    <string name="attraction_enjoytime">游玩时间：</string>
    <string name="attraction_imageuri">景点图片：</string>
    <string name="button_add_attraction">新增景点</string>
    <string name="button_update_attraction">修改景点信息</string>
    <string name="attraction_favoutite">收藏数：</string>
    <string name="button_orderplan">预定</string>
    <string name="User_orderState0">已预订</string>
    <string name="button_cannelorder">取消订单</string>
    <string name="button_successorder">确认完成</string>
    <string name="userorder_orderS">预定成功</string>
    <string name="image_huge_url">景点大图：</string>
    <string name="attraction_des_detail">景点简介：</string>
    <string name="add_plan_firstimage">封面图片：</string>
    <string name="add_plan_title">封面标题：</string>
    <string name="attraction_mark">评价</string>
    <string name="order_mark">请填写您的评价!</string>
    <string name="order_submit_mark">提交评价</string>
    <string name="filter_mark">按评分</string>
    <string name="price_desc">价格降序</string>
    <string name="filter_price">价格升序</string>
    <string name="filter_sale">按销量</string>

</resources>
